# Flerous

./: .env.example  .gitignore  docker-compose.yml  pyproject.toml
app/: __init__.py
app/core/: config.py  logging_settings.py
app/db/dao/: __init__.py  alert_dao.py  base_dao.py  coin_dao.py  user_dao.py
app/db/models/: __init__.py  alert.py  base.py  coin.py  user.py
app/repository/: alert_repository.py  coin_repository.py  user_repository.py
migration/: env.py
migration/versions/: 5e3f45c1e577_add_percentage_and_base_price.py  aeaa89b7a840_initial_revision.py
