[project]
name = "flerous"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
	"alembic>=1.18.4",
	"asyncpg>=0.31.0",
	"loguru>=0.7.3",
	"pydantic-settings>=2.13.1",
	"sqlalchemy>=2.0.49",
]

[dependency-groups]
dev = ["ruff>=0.15.7"]

[tool.ruff]
exclude = [".git", ".pytest_cache", ".ruff_cache", ".venv", "migration"]

line-length = 79
indent-width = 4

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B"]
ignore = []

fixable = ["ALL"]
unfixable = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

skip-magic-trailing-comma = false

line-ending = "auto"

docstring-code-format = true
docstring-code-line-length = "dynamic"
